# csvp

./: CMakeLists.txt  testmain.cpp
src/: main.cpp
src/csvp_client/: CMakeLists.txt  client.cpp  client.h  client_main.cpp  game.cpp  main.cpp  udp_client.cpp  udp_client.h  udp_main.cpp
src/csvp_server/: CMakeLists.txt  game.cpp  game.h  main.cpp  server.cpp  server.h  server_main.cpp
src/game_logic/: game.cpp  game.h  game_main.cpp  screensaver.cpp  screensaver.h
src/linux_server_csvp/: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.09247cf  Makefile  cmake_install.cmake  linux_server_csvp  main.cpp  main_upd.cpp  server.cpp  server.h  udp_server.cpp  udp_server.h
