# cmake_minimum_required(VERSION 3.5)
# project(CSVP LANGUAGES CXX)

# set(CMAKE_CXX_STANDARD 20)

# add_executable(csvp
#     src/csvp_server/server.cpp
#     src/csvp_server/server.h
#     src/csvp_server/server_main.cpp
#     src/game_logic/game.cpp
#     src/game_logic/game.h
#     src/game_logic/game_main.cpp
#     src/csvp_client/client.cpp
#     src/csvp_client/client.h
#     src/csvp_client/client_main.cpp
# )